# trading-tests2

./: .env  .env.example  .gitignore  1H_OPTIMIZATION_FINAL_RESULTS.md  1H_OPTIMIZATION_RESULTS.md  AGENTS.md  ANALYTICS_MODULE_SUMMARY.md  CHARTS_IMPROVEMENT_SUMMARY.md  DELIVERY_SUMMARY.md  FINAL_REPORT.md  FRAMEWORK_README.md  OPTIMIZATION_IMPROVEMENTS.md  PROJECT_CLEANUP.md  QUICK_START.md  README.md  README_STRATEGY.md  STRATEGY_SUMMARY.md  analytics.py  backtest_smooth_4h.py  backtrader-ema-strategy.py  breakout_trend_1h.py  btcusdt_analytics_report.md  data_fetcher.py  ema-strategy.py  generate_smooth_dashboard.py  hybrid_strategy.py  main.py  mean_reversion_simple.py  nautilus_backtest.py  nautilus_trend_strategy.py  optimize_smooth_4h.py  optimized_trend.py  optimized_trend_1h.py  optimized_trend_1h_strategy.pine  optimized_trend_1h_v2.py  optimized_trend_strategy.pine  pinescript-ema.py  pure_trend_backtest.py  pyproject.toml  robust_grid_search_1h.py  (+10 more)
docs/: OVERFITTING_REPORT.md
examples/: example_analytics.py  example_backtest.py  example_dashboard.py
legacy_strategies/: README.md  enhanced_trend_1h.py  optimized_trend.py
outputs/: btc_4h_ohlcv.csv  equity_curves.csv  original_trend_4h_trades.csv  smooth_trend_4h_analysis.json  smooth_trend_4h_dashboard.html  smooth_trend_4h_optimization.json  smooth_trend_4h_trades.csv
results/: README.md
scripts/: README.md  btc_data_fetcher.py  btc_data_fetcher_1h.py  enhanced_grid_search_1h.py  overfitting_analysis.py  random_search_1h.py  robust_grid_search.py
strategies/: AGENTS.md  TIME_BASED_EDGE.md  (+5 more)
(+53 files in other folders)
