[project]
name = "trading-tests2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtesting>=0.6.5",
    "backtrader>=1.9.78.123",
    "ccxt>=4.5.29",
    "fsspec[http]>=2025.12.0",
    "matplotlib>=3.10.8",
    "nautilus-trader==1.222.0a20251214",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "uvloop>=0.22.1",
    "yfinance>=0.2.28",
]

[[tool.uv.index]]
url = "https://packages.nautechsystems.io/simple"
